# rmk_firmware

./: .gitignore  Cargo.toml  LICENSE  README.md  example_keymap.json  memory.x
.cargo/: config.toml
.github/workflows/: buildtest.yml
src/: keycodes.rs  main.rs  mcu.rs  test.rs
src/mcu/: rp2040.rs
