[package]
name = "rmk_firmware"
version = "0.1.0"
edition = "2021"
# authors = ["Lucas Placentino"] #deprecated ?
description = "RMK - Rust keyboard firmware, based on QMK and KMK"
documentation = "https://obsilab.github.io/rmk_docs/" #TODO need to change url
# homepage = "urltowebsite" #TODO need to change url
readme = "README.md"
repository = "https://github.com/ObsiLab/rmk_firmware"
license = "MIT"
# license-file = "LICENSE"
keywords = ["keyboard","firmware","qmk","rmk","kmk"]
categories = ["embedded","hardware-support"] # [...,"no-std"] ?

# prevents from accidentily publishing to crates.io :
publish = false
# ! REMOVE IF PUBLISHING TO crates.io

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [badges] # used ?
# maintenance = ["experimental"] # used ?

[dependencies]

log = "0.4"

# v1 test
usbd-human-interface-device = "0.2.1"

# ?
cortex-m = "0.7.3"
cortex-m-rt = ">=0.6.15,<0.8"
cortex-m-rtic = "0.6.0-rc.4"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

# ?
defmt = "0.3.0"
# defmt = { version = ">=0.2.0, <0.4", optional = true }
panic-halt= "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# ?
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.0"


# You can use any BSP. Uncomment this to use for example :
# rp-pico = "0.3.0"
# sparkfun-pro-micro-rp2040 = "0.2.0"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.4.0", features=["rt"] }
rp2040-boot2 = "0.2.0"


[dev-dependencies]
color-eyre = "0.6.2" # colored error messages

# [profile.dev] # ?
# lto = true
# incremental = false
# opt-level = "z"
# debug = true

# [profile.release] # ?
# lto = true
# incremental = false

# [features]
# default = ["boot2"]
# boot2 = ["rp2040-boot2"]


# --- End of file ---
